tests/datatypes/errors/type_misspelled_property.js
/*
Expected Error:
TypeError
*/
let user = { name: "Alice", age: 25 };
let nme = user.nme;
